--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,39 @@
 name: Testes
-#Gatilhos - é o que vai disparar a execução do meu teste
-  #Programados por tempo
-  #Acionados por eventos
+
+# Gatilhos que irão disparar a execução do teste
+# Programados por tempo
+# Acionados por eventos, ex: push
 on:
   push:
     branches: [ main ]
-
+  
 jobs:
   build:
-# Máquina ou ambiente que o teste será executado
+# Máquina ou ambiente que os testes serão executados, pegando uma máquina da infra do git hub emprestada
     runs-on: ubuntu-latest
-
-# Passos pra pegar a máquina/ambiente para executar os testes (considere que a máquina/ambiente não tem nada instalado
+# Preparar a máquina e o ambiente para executar os testes, pensando que ela é zerada e não tem nada instaladado
     steps:
-    # Donwload do código
+    #download do código
     - uses: actions/checkout@v2
     
-    # Setup da versão do node
+    #Setup da versão do node
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
-    # o npm install irá olhar para o package.json do projeto e baixar tudo que está em "devDependencies":{}   
+        node-version: 14.x
+        
     - run: npm install
     - run: npm run cypress:run
-    # vai seguir executando os testes caso encontre algum erro, pois iremos utilizar o relatório para isso
+    #caso dê erro em algum teste, o continue irá seguir executando os demais testes, pois iremos utilizar o relatório para analisar os erros, caso existam
       continue-on-error: true
+      
     - run: npm run report:merge
-    
     - run: npm run report:mocha
-    
-    # recurso do github para publicar o relatório em formato html chamado Github Pages
-
+    # Github Pages é um plugin que publica o relatório no github para publicar o relatório em html para que outras pessoas possam ver
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
-       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       BRANCH: gh-pages
-       FOLDER: mochawesome-report
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: mochawesome-report
+        
